; ModuleID = '/home/carl/AnghaBench/reactos/dll/3rdparty/dxtn/extr_txc_fetch_dxtn.c_fetch_2d_texel_rgba_dxt3.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/3rdparty/dxtn/extr_txc_fetch_dxtn.c_fetch_2d_texel_rgba_dxt3.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ACOMP = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @fetch_2d_texel_rgba_dxt3(i32 %0, i32* %1, i32 %2, i32 %3, i32* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store i32* %1, i32** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32* %4, i32** %10, align 8
  %14 = load i32*, i32** %10, align 8
  store i32* %14, i32** %11, align 8
  %15 = load i32*, i32** %7, align 8
  %16 = load i32, i32* %6, align 4
  %17 = add nsw i32 %16, 3
  %18 = sdiv i32 %17, 4
  %19 = load i32, i32* %9, align 4
  %20 = sdiv i32 %19, 4
  %21 = mul nsw i32 %18, %20
  %22 = load i32, i32* %8, align 4
  %23 = sdiv i32 %22, 4
  %24 = add nsw i32 %21, %23
  %25 = mul nsw i32 %24, 16
  %26 = sext i32 %25 to i64
  %27 = getelementptr inbounds i32, i32* %15, i64 %26
  store i32* %27, i32** %12, align 8
  %28 = load i32*, i32** %12, align 8
  %29 = load i32, i32* %9, align 4
  %30 = and i32 %29, 3
  %31 = mul nsw i32 %30, 4
  %32 = load i32, i32* %8, align 4
  %33 = and i32 %32, 3
  %34 = add nsw i32 %31, %33
  %35 = sdiv i32 %34, 2
  %36 = sext i32 %35 to i64
  %37 = getelementptr inbounds i32, i32* %28, i64 %36
  %38 = load i32, i32* %37, align 4
  %39 = load i32, i32* %8, align 4
  %40 = and i32 %39, 1
  %41 = mul nsw i32 4, %40
  %42 = ashr i32 %38, %41
  %43 = and i32 %42, 15
  store i32 %43, i32* %13, align 4
  %44 = load i32*, i32** %12, align 8
  %45 = getelementptr inbounds i32, i32* %44, i64 8
  %46 = load i32, i32* %8, align 4
  %47 = and i32 %46, 3
  %48 = load i32, i32* %9, align 4
  %49 = and i32 %48, 3
  %50 = load i32*, i32** %10, align 8
  %51 = call i32 @dxt135_decode_imageblock(i32* %45, i32 %47, i32 %49, i32 2, i32* %50)
  %52 = load i32, i32* %13, align 4
  %53 = call i64 @EXP4TO8(i32 %52)
  %54 = trunc i64 %53 to i32
  %55 = call i32 @UBYTE_TO_CHAN(i32 %54)
  %56 = load i32*, i32** %11, align 8
  %57 = load i64, i64* @ACOMP, align 8
  %58 = getelementptr inbounds i32, i32* %56, i64 %57
  store i32 %55, i32* %58, align 4
  ret void
}

declare dso_local i32 @dxt135_decode_imageblock(i32*, i32, i32, i32, i32*) #1

declare dso_local i32 @UBYTE_TO_CHAN(i32) #1

declare dso_local i64 @EXP4TO8(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
